hopefully fixed lesson 6
